2010-04-28  Sam Steingold  <sds@gnu.org>

	* progmodes/bug-reference.el (bug-reference-url-format): Mark as
	`safe-local-variable' if the value is a string or a symbol with
	the property `bug-reference-url-format'.

2010-04-28  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/bug-reference.el (bug-reference-url-format): Revert
	2010-04-27 change due to security risk.

2010-04-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make it possible to locally disable a globally enabled mode.
	* simple.el (fundamental-mode): Run fundamental-mode-hook.
	* emacs-lisp/derived.el (define-derived-mode): Use fundamental-mode
	rather than kill-all-local-variables so it runs fundamental-mode-hook.
	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Use fundamental-mode-hook to run MODE-enable-in-buffers earlier, so
	that subsequent hooks get a chance to disable it.

2010-04-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Avoid re-enabling a minor mode after the user turned the minor mode
	off if MODE-enable-in-buffers is run twice (typically once from
	fundamental-mode's after-change-major-mode-hook and a second time from
	run-mode-hook's own after-change-major-mode-hook).

	* emacs-lisp/lisp.el (lisp-complete-symbol): Fail gracefully.

2010-04-27  Sam Steingold  <sds@gnu.org>

	* progmodes/bug-reference.el (bug-reference-url-format): Mark as
	`safe-local-variable' if the value is a string or a function, as
	documented and implemented on 2010-04-02.

2010-04-27  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-buffer-internal): Bind `ido-use-virtual-buffers' to nil
	when method is 'kill.

2010-04-27  Agustín Martín  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-init-process): Fix personal dictionary condition
	in default directory check.
	(ispell-init-process,ispell-kill-ispell,kill-buffer-hook):
	Kill ispell process when killing its associated buffer.

2010-04-27  Jan Djärv  <jan.h.d@swipnet.se>
